--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include CONTRIBUTING.md
 include README.md
 include EarlyDarkEmu/data/
+include EarlyDarkEmu/data/obs_data
 include EarlyDarkEmu/data/pkg_data
 include EarlyDarkEmu/model/
 recursive-exclude * __pycache__
